--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -23,7 +23,7 @@
         <input type="hidden" id="pcre_By" />*@
 
             <div class="form-group">
-                <label class="control-label col-md-4 required">Company Name</label>
+                <label class="control-label col-md-4 required">Customer Name</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" id="txtCompanyName" />
                     @*<span id="lblCompanyName" style="color:red" />*@
