--- a/ProAcc/Asset/Jquery/jqGrid/css/ui.jqgrid-bootstrap4.css
+++ b/ProAcc/Asset/Jquery/jqGrid/css/ui.jqgrid-bootstrap4.css
@@ -472,14 +472,14 @@ div.tablediv > .table-bordered {
 .tablediv > .row { margin: 0 0}
 
 /*Table striped fix */
-.ui-jqgrid-view .table-striped tbody tr:nth-of-type(2n+1)
+/*.ui-jqgrid-view .table-striped tbody tr:nth-of-type(2n+1)
 {
     background-color: inherit;
 }
 .ui-jqgrid-view .table-striped > tbody > tr:nth-child(odd) > td,
 .ui-jqgrid-view .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: rgba(0,0,0,.05);
-}
+}*/
 
 
 /* loading */
