--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -45,7 +45,7 @@
                 @*@Html.DisplayNameFor(model => model.UserTypeID)*@
             </th>
             <th>
-                Company Name
+                Customer Name
                 @*@Html.DisplayNameFor(model => model.Customer.Company_Name)*@
             </th>
 
