--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -228,7 +228,7 @@
                                 </a>
 
                                 <ul>
-                                    @if ( User.IsInRole("Admin"))
+                                    @if ( User.IsInRole("Admin") || User.IsInRole("Project Manager"))
                                     {
                                         <li>
                                             @*<a href="@Url.Action("PMAdminCreate", "ProjectMonitor")">*@
@@ -248,7 +248,7 @@
                                             </li>
 
                                         
-                                        @if (User.IsInRole("Consultant") || User.IsInRole("Admin"))
+                                        @if (User.IsInRole("Admin") || User.IsInRole("Consultant") || User.IsInRole("Project Manager"))
                                         {
                                             <li>
                                                 <a href="@Url.Action("CreateAnalysis", "Assessment")">
@@ -604,6 +604,7 @@
                                         </li>
                                     </ul>
                                 </li>*@
+                            }
                                 <li>
                                     <a href="#">
                                         <i class="metismenu-icon fa fa-flag-checkered"></i>
@@ -621,7 +622,7 @@
                                     </ul>
                                 </li>
 
-                            }
+                            
 
                         </ul>
                         }
