--- a/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
@@ -84,6 +84,8 @@
                 $("#btnProjectUpdate").show();
                 $("#btnAddNew").show();
                 $("#btnProjectCreate").hide();
+                $("#prjtCreate").hide();
+                $("#prjtUpdate").show();
 
             },
             error: function (err) {
